<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_debug"
        android:orderInCategory="100"
        android:title="Debug"/>

    <item
        android:id="@+id/action_show_data"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_list"
        android:title="@string/label_action_show_data"/>

    <item
        android:id="@+id/action_partially_refuse"
        android:orderInCategory="100"
        android:title="@string/label_action_partially_refused"/>

    <item
        android:id="@+id/action_force_exit"
        android:orderInCategory="100"
        android:title="@string/label_action_force_exit"
        app:showAsAction="never" />
</menu>
