<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="15"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/drawableBackground"
        android:fillViewport="true"
        android:layout_weight="13">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacePrimaryHalf">

            <TableRow>

                <LinearLayout
                    android:id="@+id/btnStartSurvey"
                    style="@style/mainMenuItem">

                    <ImageView
                        style="@style/mainMenuItem.icon"
                        android:src="@drawable/ic_pen_writing"
                        android:tint="?attr/colorText" />

                    <TextView
                        style="@style/mainMenuItem.text"
                        android:text="@string/main_menu_item_start_survey" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnHousehold"
                    style="@style/mainMenuItem">

                    <ImageView
                        style="@style/mainMenuItem.icon"
                        android:src="@drawable/ic_pageview"
                        android:tint="?attr/colorText" />

                    <TextView
                        style="@style/mainMenuItem.text"
                        android:text="@string/main_menu_item_view_household" />
                </LinearLayout>

            </TableRow>


            <TableRow>

                <LinearLayout
                    android:id="@+id/btnSync"
                    style="@style/mainMenuItem">

                    <ImageView
                        style="@style/mainMenuItem.icon"
                        android:src="@drawable/ic_sync"
                        android:tint="?attr/colorText" />

                    <TextView
                        style="@style/mainMenuItem.text"
                        android:text="@string/main_menu_item_sync" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnMap"
                    style="@style/mainMenuItem">

                    <ImageView
                        style="@style/mainMenuItem.icon"
                        android:src="@drawable/ic_map"
                        android:tint="?attr/colorText" />

                    <TextView
                        style="@style/mainMenuItem.text"
                        android:text="@string/main_menu_item_map" />
                </LinearLayout>

            </TableRow>


            <TableRow>

                <LinearLayout
                    android:id="@+id/btnReportIssue"
                    style="@style/mainMenuItem">

                    <ImageView
                        style="@style/mainMenuItem.icon"
                        android:src="@drawable/ic_support"
                        android:tint="?attr/colorText" />

                    <TextView
                        style="@style/mainMenuItem.text"
                        android:text="@string/main_menu_item_request_help" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnExit"
                    style="@style/mainMenuItem">

                    <ImageView
                        style="@style/mainMenuItem.icon"
                        android:src="@drawable/ic_exit"
                        android:tint="?attr/colorText" />

                    <TextView
                        style="@style/mainMenuItem.text"
                        android:text="@string/main_menu_item_exit" />
                </LinearLayout>

            </TableRow>

        </TableLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="?attr/bgGradientCredit"
        android:padding="@dimen/spacePrimary"
        android:gravity="center"
        android:layout_weight="2">

        <TextView
            android:text="@string/credit"
            style="@style/textH5"
            android:textAlignment="center"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/copyright_version"
            style="@style/textH6"
            android:textAlignment="center"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>
