<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spaceBig"
    android:gravity="center"
    android:background="?attr/bgGradientPrimary">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/spacePrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/spaceBig"
            android:layout_marginEnd="@dimen/spaceBigger"
            android:layout_marginBottom="@dimen/spacePrimary">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="?attr/drawableLogo"/>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacePrimary"
            android:layout_marginBottom="@dimen/spacePrimary"
            android:stretchColumns="*">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/th"
                    android:text="@string/th_name"
                    android:textAlignment="textStart"/>
                <TextView
                    android:id="@+id/tv_name"
                    style="@style/th"
                    android:textAlignment="textStart"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/th"
                    android:text="@string/th_cnic"
                    android:textAlignment="textStart"/>
                <TextView
                    android:id="@+id/tv_cnic"
                    style="@style/th"
                    android:textAlignment="textStart"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/th"
                    android:text="@string/th_login_expiry"
                    android:textAlignment="textStart"/>
                <TextView
                    android:id="@+id/tv_login_expiry"
                    style="@style/th"
                    android:textAlignment="textStart"/>

            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/th_label_spi_change_gender"
            style="@style/td"
            android:textColor="?attr/colorText"/>
        <Spinner
            android:id="@+id/spGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tableCellZygote"
            android:background="?attr/borderInput"
            android:layout_marginTop="@dimen/spacePrimary"
            android:layout_marginBottom="@dimen/spacePrimary"
            android:soundEffectsEnabled="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/th_label_spi_chose_theme"
            style="@style/td"
            android:textColor="?attr/colorText"/>
        <Spinner
            android:id="@+id/spTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/tableCellZygote"
            android:background="?attr/borderInput"
            android:layout_marginTop="@dimen/spacePrimary"
            android:layout_marginBottom="@dimen/spacePrimary"
            android:soundEffectsEnabled="true" />

    </LinearLayout>

    <Button
        android:id="@+id/btnClose"
        style="@style/btnAction"
        android:text="@string/label_btn_save_close"/>

</LinearLayout>