<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_1"
                style="@style/tvInputLabel"
                android:text="@string/label_input_day"
                android:singleLine="true" />

            <LinearLayout
                android:id="@+id/kbi_1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_2"
                style="@style/tvInputLabel"
                android:text="@string/label_input_month"
                android:singleLine="true" />

            <LinearLayout
                android:id="@+id/kbi_2"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_3"
                style="@style/tvInputLabel"
                android:text="@string/label_input_year"
                android:singleLine="true" />

            <LinearLayout
                android:id="@+id/kbi_3"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="vertical" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/btn_calendar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?borderInput"
                app:tint="?attr/colorAccent"
                android:gravity="center"
                android:layout_margin="@dimen/spacePrimaryHalf">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_calendar"
                    android:layout_gravity="center"
                    android:foregroundGravity="center"
                    app:tint="?attr/colorAccent" />
            </RelativeLayout>


        </LinearLayout>

</LinearLayout>
